<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/xg_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xg_login" />

        <Button
            android:id="@+id/xg_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xg_pay" />

        <Button
            android:id="@+id/xg_switch_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xg_switch_account" />

        <Button
            android:id="@+id/xg_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xg_logout" />

        <Button
            android:id="@+id/xg_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xg_exit" />

        <Button
            android:id="@+id/xg_show_orders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xg_show_orders" />
    </LinearLayout>

</ScrollView>